# ExcelAgent

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
agent/: core.py  dispatcher.py
benchmark/: evaluate.py  run_benchmark.py
docs/: README.md
examples/: demo.py
llm/: client.py  multimodal.py
skills/xlsx/: SKILL.md
skills/xlsx/scripts/: recalc.py
tests/: test_llm.py  test_reader.py  test_writer.py
tools/: analyzer.py  code_executor.py  formatter.py  reader.py  writer.py
